--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 APP_NAME=Laravel
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:gD3NWSGiwT9pVsKVEFkX3iS6jCN/d/2+rf/rhJ6WUO4=
 APP_DEBUG=true
 APP_URL=http://localhost
 
